--- a/vagrant_setup_scripts/Vagrantfile
+++ b/vagrant_setup_scripts/Vagrantfile
@@ -398,24 +398,18 @@ def configure_vm_network(node, ip, instance_num)
     # Calculate IP based on detected subnet and $subnet_split4
     subnet_base = detected_network[:subnet].split('.')[0..2].join('.')
     auto_ip = "#{subnet_base}.#{$subnet_split4 + instance_num}"
+    network_options = {
+      ip: auto_ip,
+      netmask: detected_network[:netmask]
+    }
     if $provider == "virtualbox"
-      network_options = {
-        ip: auto_ip,
-        netmask: detected_network[:netmask],
-        virtualbox__nic_type: "virtio"
-      }
+      network_options[:virtualbox__nic_type] = "virtio"
       node.vm.network :private_network, **network_options
     elsif $provider == "libvirt"
-      network_options = {
-        ip: auto_ip,
-        netmask: detected_network[:netmask]
-      }
+      network_options[:libvirt__network] = "nat-200-network"
       node.vm.network :private_network, **network_options
     elsif $provider == "parallels"
       network_options = {
-        ip: auto_ip,
-        netmask: detected_network[:netmask]
-      }
       node.vm.network :private_network, **network_options
     end
     
