--- a/vagrant_setup_scripts/Vagrantfile
+++ b/vagrant_setup_scripts/Vagrantfile
@@ -78,6 +78,12 @@ $network_plugin ||= "calico"                   # CNI plugin (calico, flannel, et
 $multi_networking ||= "False"                  # Enable Multus CNI for multi-networking
 $kube_version ||= "1.32.7"                     # Kubernetes version
 
+# MetalLB Configuration
+$kube_proxy_strict_arp ||= "false"                  # Enable strict ARP for kube-proxy (required for MetalLB, kube-vip)
+$metallb_enabled ||= "false"                        # Enable MetalLB load balancer
+$metallb_protocol ||= "layer2"                     # MetalLB protocol (layer2 or bgp)
+$metallb_ip_range ||= "192.168.100.100-192.168.100.200" # MetalLB IP address range
+
 # Download and Cache Configuration
 $download_run_once ||= "True"                  # Download binaries only once
 $download_force_cache ||= "False"              # Force use of cache
@@ -739,7 +745,19 @@ Vagrant.configure("2") do |config|
         "ansible_ssh_private_key_file": File.join(Dir.home, ".vagrant.d", "insecure_private_key"),
         "unsafe_show_logs": "True",
         "preinstall_selinux_state": "disabled",
-        "kube_version": "#{$kube_version}"
+        "kube_version": "#{$kube_version}",
+        "kube_proxy_strict_arp": "#{$kube_proxy_strict_arp}",
+        "metallb_enabled": "#{$metallb_enabled}",
+        "metallb_protocol": "#{$metallb_protocol}",
+        "metallb_config": {
+          "address_pools" => {
+            "primary" => {
+              "ip_range" => ["#{$metallb_ip_range}"],
+              "auto_assign" => "true"
+            }
+          },
+          "layer2" => ["primary"]
+        }
       }
 
       # Add proxy configuration to host_vars if defined in config.rb
