--- a/vagrant_setup_scripts/Vagrantfile
+++ b/vagrant_setup_scripts/Vagrantfile
@@ -19,7 +19,7 @@ SUPPORTED_OS = {
   "ubuntu2204"          => {box: "generic/ubuntu2204",         user: "vagrant"},
   "ubuntu2404"          => {box: "bento/ubuntu-24.04",         user: "vagrant"},
   "rockylinux8"         => {box: "bento/rockylinux-8.10",      user: "vagrant"},
-  "rockylinux9"         => {box: "bento/rockylinux-9.5",       user: "vagrant"},
+  "rockylinux9"         => {box: "bento/rockylinux-9.6",       user: "vagrant"},
   "opensuse"            => {box: "opensuse/Leap-15.4.x86_64",  user: "vagrant"},
   "opensuse-tumbleweed" => {box: "opensuse/Tumbleweed.x86_64", user: "vagrant"},
   "oraclelinux8"        => {box: "bento/oraclelinux-8.10",     user: "vagrant"},
@@ -733,6 +733,7 @@ Vagrant.configure("2") do |config|
         # These two settings will put kubectl and admin.config in $inventory/artifacts
         "kubeconfig_localhost": "True",
         "kubectl_localhost": "True",
+        "enable_nodelocaldns": "False",
         "metrics_server_enabled": "True",
         "cert_manager_enabled": "#{$cert_manager_enabled}",
         "local_path_provisioner_enabled": "#{$local_path_provisioner_enabled}",
